--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,9 @@
-$light-gray: #eeeeee;
-$dark-gray: #aaaaaa;
-$black: #282828;
+// COLORS
+$clr-light-gray: #aaaaaa;
+$clr-dark-gray: #999999;
+$clr-black: #282828;
+
+// FONT-SIZES
+$fz-small: 12px;
+$fz-medium: 14px;
+$fz-large: 16px;
