[HLMNT-FIXES] added grid mixin.

--- a/src/components/Mission/Item/styles.scss
+++ b/src/components/Mission/Item/styles.scss
@@ -1,8 +1,5 @@
 @import '../../../styles/';
 
 .mission {
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: 300px 1fr;
-  grid-template-rows: 16px 1fr;
+  @include display-grid(300px 1fr, 16px 1fr, 20px);
 }
